[gd_scene load_steps=10 format=3 uid="uid://bd8876etluol4"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_qymau"]
[ext_resource type="PackedScene" uid="uid://dla0imbj1hi4a" path="res://scenes/player.tscn" id="2_umkiq"]
[ext_resource type="Script" path="res://scripts/player1.gd" id="3_lshm1"]
[ext_resource type="Script" path="res://scripts/player2.gd" id="5_6ulo5"]
[ext_resource type="Texture2D" uid="uid://cs3ub7mnl1c6t" path="res://assets/images/icon.svg" id="6_plmti"]
[ext_resource type="Script" path="res://scripts/gameUI.gd" id="6_urq1p"]
[ext_resource type="AudioStream" uid="uid://i5tvxdv1yij2" path="res://assets/audios/celebration_sound.mp3" id="7_tf7hw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pxjhw"]
size = Vector2(1480, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xqmds"]
size = Vector2(20, 760)

[node name="Game" type="Node2D"]
script = ExtResource("1_qymau")

[node name="Barriers" type="StaticBody2D" parent="."]

[node name="BarrierUp" type="CollisionShape2D" parent="Barriers"]
position = Vector2(640, -10)
shape = SubResource("RectangleShape2D_pxjhw")

[node name="BarrierDown" type="CollisionShape2D" parent="Barriers"]
position = Vector2(640, 730)
shape = SubResource("RectangleShape2D_pxjhw")

[node name="KinematicObjects" type="Node" parent="."]

[node name="Player1" parent="KinematicObjects" instance=ExtResource("2_umkiq")]
position = Vector2(50, 360)
script = ExtResource("3_lshm1")

[node name="Player2" parent="KinematicObjects" instance=ExtResource("2_umkiq")]
position = Vector2(1230, 360)
script = ExtResource("5_6ulo5")

[node name="Field1" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field1"]
position = Vector2(-115, 360)
shape = SubResource("RectangleShape2D_xqmds")

[node name="DivisorLine" type="Line2D" parent="."]
points = PackedVector2Array(640, 734, 640, -9)

[node name="Field2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Field2"]
position = Vector2(1395, 360)
shape = SubResource("RectangleShape2D_xqmds")

[node name="Particles" type="Node" parent="."]

[node name="LeftSideParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2(50, 730)
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 0.35
texture = ExtResource("6_plmti")
direction = Vector2(0.5, -1)
gravity = Vector2(0, 1500)
initial_velocity_min = 1000.0
initial_velocity_max = 1500.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.25
scale_amount_max = 0.5

[node name="RightSideParticles" type="CPUParticles2D" parent="Particles"]
position = Vector2(1230, 730)
emitting = false
amount = 20
lifetime = 2.0
one_shot = true
explosiveness = 0.35
texture = ExtResource("6_plmti")
direction = Vector2(-0.5, -1)
gravity = Vector2(0, 1500)
initial_velocity_min = 1000.0
initial_velocity_max = 1500.0
angle_min = -720.0
angle_max = 720.0
scale_amount_min = 0.25
scale_amount_max = 0.5

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("6_urq1p")

[node name="BackButton" type="Button" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 16.0
offset_right = 90.0
offset_bottom = 99.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 42
text = "Menu"

[node name="LeftPointsLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -38.0
offset_right = -80.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightPointsLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -38.0
offset_right = 120.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 56
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="CelebrationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tf7hw")

[connection signal="body_entered" from="Field1" to="." method="_on_field_1_body_entered"]
[connection signal="body_entered" from="Field2" to="." method="_on_field_2_body_entered"]
[connection signal="button_up" from="UI/BackButton" to="UI" method="_on_back_button_button_up"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_load_timer_timeout"]
